Bug 1173634 - Report pending async shutdowns in shutdown hangs. r=cpearce, a=sledru